think i should commit, chat just barely working, 1.3 features left