@@ -3,6 +3,7 @@ package com.luxof.lapisworks;
 import at.petrak.hexcasting.api.casting.eval.CastingEnvironment;
 import at.petrak.hexcasting.api.casting.eval.CastingEnvironment.HeldItemInfo;
 import at.petrak.hexcasting.api.casting.math.HexCoord;
+import at.petrak.hexcasting.api.casting.math.HexDir;
 import at.petrak.hexcasting.api.casting.math.HexPattern;
 import at.petrak.hexcasting.api.pigment.FrozenPigment;
 import at.petrak.hexcasting.api.utils.NBTHelper;
@@ -11,6 +12,7 @@ import at.petrak.hexcasting.common.lib.HexItems;
 import com.luxof.lapisworks.init.ModItems;
 import com.luxof.lapisworks.init.ModPOIs;
 import com.luxof.lapisworks.init.ModRecipes;
+import com.luxof.lapisworks.init.ModScreens;
 import com.luxof.lapisworks.init.Patterns;
 import com.luxof.lapisworks.init.LapisworksLoot;
 import com.luxof.lapisworks.init.ModBlocks;
@@ -25,14 +27,14 @@ import static com.luxof.lapisworks.LapisworksIDs.OFFHAND;
 import static com.luxof.lapisworks.init.ThemConfigFlags.allPerWorldShapePatterns;
 import static com.luxof.lapisworks.init.ThemConfigFlags.chosenFlags;
 
+import dev.emi.trinkets.api.SlotReference;
 import dev.emi.trinkets.api.TrinketComponent;
 import dev.emi.trinkets.api.TrinketsApi;
 
 import java.util.ArrayList;
-import java.util.Collection;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.function.Function;
 
 import net.fabricmc.api.ModInitializer;
 import net.fabricmc.loader.api.FabricLoader;
@@ -44,7 +46,11 @@ import net.minecraft.text.Text;
 import net.minecraft.util.DyeColor;
 import net.minecraft.util.Hand;
 import net.minecraft.util.Identifier;
+import net.minecraft.util.Pair;
+import net.minecraft.util.math.BlockPos;
+import net.minecraft.util.math.Direction;
 import net.minecraft.util.math.Vec3d;
+import net.minecraft.util.math.Vec3i;
 import net.minecraft.util.Util;
 
 import org.jetbrains.annotations.Nullable;
@@ -80,6 +86,7 @@ public class Lapisworks implements ModInitializer {
 
 	public static boolean HEXTENDED_INTEROP = false;
 	public static boolean HEXICAL_INTEROP = false;
+	public static boolean FULL_HEXICAL_INTEROP = false;
 	public static boolean HEXAL_INTEROP = false;
 
 	public static boolean isModLoaded(String modid) { return FabricLoader.getInstance().isModLoaded(modid); }
@@ -118,7 +125,7 @@ public class Lapisworks implements ModInitializer {
 		}
 
 		ThemConfigFlags.declareEm();
-		ModEntities.questionWhyIMustDoThis();
+		ModEntities.doSomethingFun();
 		Patterns.init();
 		ModItems.init_shit();
 		LapisworksServer.lockIn();
@@ -127,14 +134,16 @@ public class Lapisworks implements ModInitializer {
 		Mutables.innitBruv();
 		ModPOIs.crawlOutOfHell();
 		ModRecipes.apologizeForWarcrimes();
+		ModScreens.whatWasThatTF2CommentAboutMakingBadGUICodeSoYouDontHaveToTouchItAgain();
 
         LOGGER.info("Luxof's pet Lapisworks is getting a bit hyperactive.");
 		LOGGER.info("\"Lapisworks! Lapis Lapis!\"");
 		if (anyInterop) {
-			// yknow, i would love to make the Interop category unavailable until mods required exist
-			// but what if i keep it right there to garner curiosity and get people to download other addons?
-			// prolly won't produce that big of an effect considering Lapisworks isn't that popular
-			// but i'll make it be that way anyway, as a sign of goodwill or sumn idfk i just felt like it
+			// yknow, i would love to make the Interop category/entries unavailable until the mods
+			// required exist but what if i keep it right there to garner curiosity and get people
+			// to download other addons? prolly won't produce that big of an effect considering
+			// Lapisworks isn't that popular rn but i'll make it be that way anyway, as a sign of
+			// goodwill or sumn idfk i just felt like it
 			//PatchouliAPI.get().setConfigFlag(
 			//	"lapisworks:any_interop",
 			//	true
@@ -152,6 +161,18 @@ public class Lapisworks implements ModInitializer {
 	public static boolean trinketEquipped(LivingEntity entity, Item item) {
 		Optional<TrinketComponent> trinkCompOp = TrinketsApi.getTrinketComponent(entity);
 		return trinkCompOp.isEmpty() ? false : trinkCompOp.get().isEquipped(item);
+	}
+
+	@Nullable
+	public static Pair<SlotReference, ItemStack> getFirstTrinketIfEquipped(
+		LivingEntity entity,
+		Item item
+	) {
+		Optional<TrinketComponent> trinkCompOp = TrinketsApi.getTrinketComponent(entity);
+		if (trinkCompOp.isEmpty()) return null;
+		TrinketComponent trinkComp = trinkCompOp.get();
+		try { return trinkComp.getEquipped(stack -> stack.isOf(item)).get(0); }
+		catch (IndexOutOfBoundsException e) { return null; }
 	}
 
 	@Nullable
@@ -264,45 +285,52 @@ public class Lapisworks implements ModInitializer {
 		);
 	}
 
-	public static boolean matchShape(HexPattern pat1, HexPattern p2) {
-		// i think i read somewhere by some guy that if you record how many times
-		// a position is drawn over then it's fine
-		// he wasn't too sure though, but i pray he's right
-		// because nothing else i've done has worked
-		return equalsButUnordered(setTopLeftOrigin(pat1.positions()), setTopLeftOrigin(p2.positions()));
+	public static boolean matchShape(HexPattern pat1, HexPattern pat2) {
+		// rat said that if you record how many times a position is drawn over then it's fine
+		// they waren't too sure, but i pray they're right because nothing else i've done has worked
+		List<HexCoord> pat2Positions = pat2.positions();
+		for (HexDir dir : HexDir.values()) {
+			if (equalsButUnordered(
+				setTopLeftOrigin(new HexPattern(dir, pat1.getAngles()).positions()),
+				setTopLeftOrigin(pat2Positions)
+			)) return true;
+		}
+		return false;
 	}
+
 	public static List<HexCoord> setTopLeftOrigin(List<HexCoord> pat) {
 		HexCoord runningTopLeft = new HexCoord(0, 0);
 		for (HexCoord coord : pat) {
+
 			if (coord.getQ() < runningTopLeft.getQ() && coord.getR() <= runningTopLeft.getR()) {
 				runningTopLeft = new HexCoord(coord.getQ(), coord.getR());
+
 			} else if (coord.getR() < runningTopLeft.getR()) {
 				runningTopLeft = new HexCoord(coord.getQ(), coord.getR());
+
 			}
 		}
-        LOGGER.info("top left!: " + runningTopLeft.toString());
-		// "must be final" my ass
+		// "must be effectively final" my fucking ass! fuck off!
 		HexCoord topLeft = new HexCoord(runningTopLeft.getQ(), runningTopLeft.getR());
+
         return pat.stream().map((coord) -> {
             return new HexCoord(coord.getQ() - topLeft.getQ(), coord.getR() - topLeft.getR());
-        }).collect(Collectors.toList());
+        }).toList();
 	}
+
     /** Checks if two lists are equal, but does not check if their elements are ordered the same way. */
     public static <T extends Object> boolean equalsButUnordered(List<T> list1, List<T> list2) {
         if (list1.size() != list2.size()) { return false; }
         else if (list1.size() == 0) { return true; }
-        List<T> l2 = new ArrayList<T>(list2);
+
+        List<T> workingOn = new ArrayList<>(list2);
         for (T thing : list1) {
-            int idx = l2.indexOf(thing);
+            int idx = workingOn.indexOf(thing);
             if (idx == -1) { return false; }
-            l2.remove(idx);
+            workingOn.remove(idx);
         }
         return true;
     }
-
-	public static <T extends Object> List<T> toList(Collection<T> collection) {
-		return collection.stream().collect(Collectors.toList());
-	}
 
 	public static boolean closeEnough(float a, float b, float epsilon) {
 		return Math.abs(b - a) < epsilon;
@@ -355,5 +383,57 @@ public class Lapisworks implements ModInitializer {
 	
 	public static void setInfusedAmel(ItemStack stack, int count) {
 		NBTHelper.putInt(stack, INFUSED_AMEL, count);
+	}
+
+    public static FrozenPigment getRandomPigment(net.minecraft.util.math.random.Random rng) {
+        return new FrozenPigment(
+            new ItemStack(
+                HexItems.DYE_PIGMENTS.values().stream().toList()
+                    .get(rng.nextInt(HexItems.DYE_PIGMENTS.size()))
+            ),
+            Util.NIL_UUID
+        );
+    }
+
+	/** why is there no native method to do this? */
+	public static int dot(Vec3i a, Vec3i b) {
+		return a.getX()*b.getX() + a.getY()*b.getY() + a.getZ()*b.getZ();
+	}
+
+	/** convenience. */
+	public static int dot(Direction a, Direction b) {
+		return dot(a.getVector(), b.getVector());
+	}
+
+	/** returns a list of all (mapped) positions between <code>start</code> and <code>end</code>,
+	 * and a boolean which states if the raycast was interrupted suddenly instead of completing.
+	 * <p>to skip a pos in the final list, return <code>null</code> for the pos.
+	 * If you send a valid pos instead, it will be added to the final list.
+	 * <p>to terminate the line, simply return <code>false</code> for the boolean. */
+	public static Pair<List<BlockPos>, Boolean> castRay(
+		BlockPos startPos,
+		BlockPos endPos,
+		Function<BlockPos, Pair<BlockPos, Boolean>> atEachStep
+	) {
+		Vec3d start = startPos.toCenterPos();
+		Vec3d end = endPos.toCenterPos();
+		List<BlockPos> positions = new ArrayList<>();
+
+		BlockPos prev = null;
+		Vec3d curr = start;
+		double step = 0.1;
+		Vec3d dir = end.subtract(start).normalize().multiply(step);
+
+		while (curr.squaredDistanceTo(end) > step*step) {
+			BlockPos currPos = BlockPos.ofFloored(curr);
+			if (currPos != prev) {
+				Pair<BlockPos, Boolean> ret = atEachStep.apply(currPos);
+				if (!ret.getRight()) return new Pair<>(positions, true);
+				if (ret.getLeft() != null) positions.add(ret.getLeft());
+			}
+			prev = currPos;
+			curr.add(dir);
+		}
+		return new Pair<>(positions, false);
 	}
 }
